[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/test_scene.gd" type="Script" id=1]
[ext_resource path="res://scenes/utility/movement_sensor.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="test_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="button_increase" type="TouchScreenButton" parent="."]
position = Vector2( 92.2149, 407.921 )
rotation = 3.14159
scale = Vector2( 8.31459, 2.71335 )
shape = SubResource( 1 )

[node name="button_decrease" type="TouchScreenButton" parent="."]
position = Vector2( 381.855, 408.161 )
rotation = 3.14159
scale = Vector2( 9.88197, 2.64072 )
shape = SubResource( 1 )

[node name="button_reset" type="TouchScreenButton" parent="."]
position = Vector2( 244.768, 534.371 )
rotation = 3.14159
scale = Vector2( 9.88197, 2.64072 )
shape = SubResource( 1 )

[node name="test" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="label_test" type="Label" parent="test"]
margin_left = 167.0
margin_top = 279.0
margin_right = 250.0
margin_bottom = 293.0
text = "THis is a test"

[node name="label_acce_test" type="Label" parent="test"]
margin_left = 50.0
margin_top = 102.0
margin_right = 133.0
margin_bottom = 116.0
text = "gyro_test"

[node name="label_accel_strngth" type="Label" parent="test"]
margin_left = 50.0
margin_top = 122.0
margin_right = 133.0
margin_bottom = 136.0
text = "gyro_test"

[node name="label_max_strngth" type="Label" parent="test"]
margin_left = 50.0
margin_top = 143.0
margin_right = 133.0
margin_bottom = 157.0
text = "gyro_test"

[node name="label_gyro_test" type="Label" parent="test"]
margin_left = 52.0
margin_top = 173.0
margin_right = 110.0
margin_bottom = 187.0
text = "gyro_test"

[node name="label_velocity_monitor" type="Label" parent="test"]
margin_left = 254.0
margin_top = 105.0
margin_right = 361.0
margin_bottom = 119.0
text = "velocity_monitor"

[node name="label_steps_counter" type="Label" parent="test"]
margin_left = 61.0
margin_top = 80.0
margin_right = 101.0
margin_bottom = 94.0
text = "STEPS"

[node name="label_step_threshold" type="Label" parent="test"]
margin_left = 135.0
margin_top = 80.0
margin_right = 175.0
margin_bottom = 94.0
text = "STEPS"

[node name="label_increase" type="Label" parent="test"]
margin_left = 24.0
margin_top = 399.0
margin_right = 153.0
margin_bottom = 413.0
text = "Increase Sensetivity"

[node name="label_decrease" type="Label" parent="test"]
margin_left = 312.0
margin_top = 398.0
margin_right = 441.0
margin_bottom = 412.0
text = "decrese_sensetivity"

[node name="label_reset" type="Label" parent="test"]
margin_left = 177.0
margin_top = 527.0
margin_right = 306.0
margin_bottom = 541.0
text = "reset_data"

[node name="movement_sensor" parent="." instance=ExtResource( 2 )]

